k8s/ingress/sportapps-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sportapps-ingress
  namespace: sportapps-ns
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/backend-protocol: HTTPS
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/certificate-arn: pending
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
  labels:
    app: sportapps-ingress
spec:
  rules:
    - http:
        paths:                
          - path: /
            pathType: Prefix
            backend:
              service:
                name: front
                port: 
                  number: 80
